Added the ability to launch JetFuelView or JetFuelExplorer - In complete checkin